Update Kubernetes master creation to use the API Server via HAproxy

--- a/ansible/roles/kubernetes-master/templates/kubeadm_config.yaml.j2
+++ b/ansible/roles/kubernetes-master/templates/kubeadm_config.yaml.j2
@@ -1,6 +1,7 @@
 apiVersion: kubeadm.k8s.io/v1beta1
 kind: ClusterConfiguration
 clusterName: {{ kubernetes_cluster_name }}
+controlPlaneEndpoint: "{{ kubernetes_apiserver_bind_ip }}:{{ haproxy_kubernetes_apiserver_port }}"
 networking:
   podSubnet: {{ kubernetes_pod_network_cidr }}
 
