Update unifi to new image

--- a/apps/infra/unifi/deploy/statefulSet.yaml.j2
+++ b/apps/infra/unifi/deploy/statefulSet.yaml.j2
@@ -20,7 +20,7 @@ spec:
         app-component: unifi
     spec:
       containers:
-      - image: linuxserver/unifi:188
+      - image: linuxserver/unifi-controller:amd64-5.10.25-ls22
         name: unifi
         ports:
         #- containerPort: 8081
