--- a/apps/infra/zone-mta/deploy/redis-statefulSet.yaml.j2
+++ b/apps/infra/zone-mta/deploy/redis-statefulSet.yaml.j2
@@ -20,7 +20,7 @@ spec:
         app-component: redis
     spec:
       containers:
-      - image: redis:5.0.4-alpine
+      - image: redis:5.0.5-alpine3.9
         name: redis
         command:
         - redis-server
