--- a/apps/infra/docker-registry/config/config.yml.j2
+++ b/apps/infra/docker-registry/config/config.yml.j2
@@ -1,7 +1,7 @@
 version: 0.1
 log:
   fields:
-    service: registry
+    service: docker-registry
 storage:
   cache:
     blobdescriptor: inmemory
@@ -18,10 +18,10 @@ health:
     enabled: true
     interval: 10s
     threshold: 3
-{% if registry_notification_endpoints | default([]) %}
+{% if docker_registry_notification_endpoints | default([]) %}
 notifications:
   endpoints:
-{% for registry_notification_endpoint in registry_notification_endpoints %}
+{% for registry_notification_endpoint in docker_registry_notification_endpoints %}
     - name: {{ registry_notification_endpoint.name }}
       url:  {{ registry_notification_endpoint.url }}
 {% if registry_notification_endpoint.headers | default([]) %}
