--- a/apps/auth/lemonldap/deploy/statefulset.yaml.j2
+++ b/apps/auth/lemonldap/deploy/statefulset.yaml.j2
@@ -38,7 +38,7 @@ spec:
           mountPath: {{ lemonldap_persistent_volume_path }}
       containers:
       - name: lemonldap
-        image: {{ kubernetes_registry_url }}/lemonldap
+        image: {{ docker_registry_url }}/lemonldap
         ports:
           - containerPort: 80
             name: http
