--- a/apps/home/nodered/deploy/statefulSet.yaml.j2
+++ b/apps/home/nodered/deploy/statefulSet.yaml.j2
@@ -22,7 +22,7 @@ spec:
         app-component: nodered
     spec:
       containers:
-      - image: {{ kubernetes_registry_url }}/nodered
+      - image: {{ docker_registry_url }}/nodered
         name: nodered
         ports:
         - containerPort: 1880
