--- a/apps/infra/zone-mta/deploy/zonemta-deployment.yaml.j2
+++ b/apps/infra/zone-mta/deploy/zonemta-deployment.yaml.j2
@@ -22,7 +22,7 @@ spec:
         app-component: zonemta
     spec:
       containers:
-      - image: {{ kubernetes_registry_url }}/zone-mta
+      - image: {{ docker_registry_url }}/zone-mta
         name: zonemta
         env:
         - name: NODE_OPTIONS
