--- a/apps/monitoring/release-watcher/deploy/deployment.yaml.j2
+++ b/apps/monitoring/release-watcher/deploy/deployment.yaml.j2
@@ -22,7 +22,7 @@ spec:
         app-component: release-watcher
     spec:
       containers:
-      - image: {{ kubernetes_registry_url }}/release-watcher
+      - image: {{ docker_registry_url }}/release-watcher
         name: release-watcher
         ports:
         - containerPort: 8080
