--- a/apps/web/ttrss/deploy/ttrss-deployment.yaml.j2
+++ b/apps/web/ttrss/deploy/ttrss-deployment.yaml.j2
@@ -22,7 +22,7 @@ spec:
         app-component: ttrss
     spec:
       containers:
-      - image: {{ kubernetes_registry_url }}/ttrss
+      - image: {{ docker_registry_url }}/ttrss
         name: ttrss
         ports:
         - containerPort: 80
