--- a/apps/home/homeassistant/prepare/secrets.yaml.j2
+++ b/apps/home/homeassistant/prepare/secrets.yaml.j2
@@ -13,3 +13,8 @@ mqtt_password: {{ homeassistant_mqtt_password }}
 smtp_username: {{ homeassistant_smtp_user }}
 smtp_password: {{ homeassistant_smtp_password }}
 smtp_recipient_user: user@mail.net
+
+{% if gotify_homeassistant_enabled %}
+# Gotify
+gotify_application_token: {{ homeassistant_gotify_application_token }}
+{% endif %}
