--- a/apps/home/homeassistant/prepare/automations.yaml.j2
+++ b/apps/home/homeassistant/prepare/automations.yaml.j2
@@ -42,3 +42,24 @@
 
         It you simply dismiss the email, it will be sent again next time HomeAssistant is restarted.
         Please edit `automations.yaml` to permanently remove it.
+
+{% if gotify_homeassistant_enabled %}
+- alias: welcome_email_gotify
+  trigger:
+    platform: homeassistant
+    event: start
+  action:
+    service: notify.gotify
+    data:
+      title: "Welcome to HomeAssistant !"
+      message: |
+        This notification is configured by ansible to confirm that the whole provisioning worked fine.
+        You now have an out of the box install of HomeAssistant with a couple of settings updated :
+
+        * `secrets.yaml` contains the configuration for mysql
+        * `configuration.yaml` uses the MySQL secret to setup the recorder (instead of using a slow SQLite storage)
+        * `automations.yaml` triggers this notification.
+
+        It you simply dismiss the notification, it will be sent again next time HomeAssistant is restarted.
+        Please edit `automations.yaml` to permanently remove it.
+{% endif %}
