--- a/ansible/install_applications/roles/dev-gitlab.deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/dev-gitlab.deploy/app/deploy/ingress.yaml.j2
@@ -14,7 +14,7 @@ spec:
   - host: dev.{{ web_base_domain }}
     http:
       paths:
-        - path: {{ gitlab_context_path }}
+        - path: {{ gitlab.context_path }}
           backend:
             serviceName: gitlab
             servicePort: 80
