Rework vars for download-deluge

--- a/ansible/install_applications/roles/download-deluge.deploy/app/config/web_delta.conf.j2
+++ b/ansible/install_applications/roles/download-deluge.deploy/app/config/web_delta.conf.j2
@@ -4,7 +4,7 @@
 }{
   "port": 8112,
   "https": false,
-  "base": "{{ deluge_context_root }}",
+  "base": "{{ deluge.context_root }}",
   "pkey": "ssl/daemon.pkey",
   "cert": "ssl/daemon.cert"
 }
