Rework vars for download-pyload

--- a/ansible/install_applications/roles/download-pyload.deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/download-pyload.deploy/app/deploy/ingress.yaml.j2
@@ -12,7 +12,7 @@ spec:
   - host: dl.{{ web_base_domain }}
     http:
       paths:
-        - path: {{ pyload_context_root }}
+        - path: {{ pyload.context_root }}
           backend:
             serviceName: pyload
             servicePort: 80
