Rework vars for download-sabnzbd

--- a/ansible/install_applications/roles/download-sabnzbd.deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/download-sabnzbd.deploy/app/deploy/ingress.yaml.j2
@@ -12,7 +12,7 @@ spec:
   - host: dl.{{ web_base_domain }}
     http:
       paths:
-      - path: {{ sabnzbd_context_root }}
+      - path: {{ sabnzbd.context_root }}
         backend:
           serviceName: sabnzbd
           servicePort: 80
