--- a/ansible/install_applications/roles/download-sickchill.deploy/app/config/config_delta.ini.j2
+++ b/ansible/install_applications/roles/download-sickchill.deploy/app/config/config_delta.ini.j2
@@ -37,9 +37,9 @@ torrent_dir = /mnt/download/torrent/auto-load
 
 [SABnzbd]
 sab_host = http://sabnzbd.default:80/
-sab_apikey = {{ sabnzbd_api_key }}
-sab_username = {{ sabnzbd_user }}
-sab_password = {{ sabnzbd_password }}
+sab_apikey = {{ sabnzbd.api_key }}
+sab_username = {{ sabnzbd.user }}
+sab_password = {{ sabnzbd.password }}
 
 [Email]
 #use_email = 0
