--- a/ansible/install_applications/roles/download-sabnzbd.deploy/app/config/autoProcessMedia_delta.cfg.j2
+++ b/ansible/install_applications/roles/download-sabnzbd.deploy/app/config/autoProcessMedia_delta.cfg.j2
@@ -5,7 +5,7 @@
 
 [SickBeard]
     #### autoProcessing for TV Series
-{% for category_name in sabnzbd_nzbToMedia_config_sickbeard %}{% set category_config = sabnzbd_nzbToMedia_config_sickbeard[category_name] %}
+{% for category_name in sabnzbd.nzbToMedia_config_sickbeard %}{% set category_config = sabnzbd.nzbToMedia_config_sickbeard[category_name] %}
     #### {{ category_name }} - category that gets called for post-processing with SB
     [[{{ category_name }}]]
         enabled = {{ category_config.enabled }}
@@ -49,6 +49,6 @@
     ###### SabNZBD (You must edit this if you're using nzbToMedia.py with SabNZBD)
     sabnzbd_host = sabnzbd.default
     sabnzbd_port = 80
-    sabnzbd_apikey = {{ sabnzbd_api_key }}
+    sabnzbd_apikey = {{ sabnzbd.api_key }}
     ###### Enter the default path to your default download directory (non-category downloads). this directory is protected by safe_mode.
     default_downloadDirectory =
