--- a/ansible/install_applications/roles/download-sabnzbd.deploy/app/config/sabnzbd_delta.ini.j2
+++ b/ansible/install_applications/roles/download-sabnzbd.deploy/app/config/sabnzbd_delta.ini.j2
@@ -5,7 +5,7 @@ __encoding__ = utf-8
 
 host = 0.0.0.0
 port = 8080
-url_base = {{ sabnzbd_context_root | regex_replace('/$', '') }}
+url_base = {{ sabnzbd.context_root | regex_replace('/$', '') }}
 host_whitelist = sabnzbd-0,dl.{{ web_base_domain }}
 
 enable_https = 0
@@ -19,19 +19,19 @@ download_dir = /mnt/download/newsgroup/pending
 complete_dir = /mnt/download/newsgroup/done
 script_dir = /opt/nzbToMedia
 
-username = "{{ sabnzbd_user }}"
-password = "{{ sabnzbd_password }}"
+username = "{{ sabnzbd.user }}"
+password = "{{ sabnzbd.password }}"
 
 #nzb_key = 12345678901234567890123456789012
-api_key = "{{ sabnzbd_api_key }}"
+api_key = "{{ sabnzbd.api_key }}"
 
-email_server = "{{ sabnzbd_smtp_host }}:{{ sabnzbd_smtp_port }}"
-email_account = "{{ sabnzbd_smtp_user }}"
-email_pwd = "{{ sabnzbd_smtp_password }}"
+email_server = "{{ sabnzbd.smtp.host }}:{{ sabnzbd.smtp.port }}"
+email_account = "{{ sabnzbd.smtp.user }}"
+email_pwd = "{{ sabnzbd.smtp.password }}"
 
-{% if sabnzbd_nzbToMedia_config_sickbeard | default([]) | length > 0 %}
+{% if sabnzbd.nzbToMedia_config_sickbeard | default([]) | length > 0 %}
 [categories]
-{% for category_name in sabnzbd_nzbToMedia_config_sickbeard %}
+{% for category_name in sabnzbd.nzbToMedia_config_sickbeard %}
 [[{{ category_name }}]]
 script = nzbToSickBeard.py
 {% endfor %}
